Different boards support
Change A0-A5 pins to GPIO numbers for compatibility with different boards
Add WT32-ETH01 build environment
Add script to grab all *.bin files into one folder after build

--- a/platformio.ini
+++ b/platformio.ini
@@ -17,6 +17,7 @@ default_envs = featheresp32
 [env]
 platform = espressif32
 framework = arduino
+monitor_speed = 115200
 lib_deps =
 	#included in project
 	HX711
@@ -32,7 +33,20 @@ lib_deps =
 	pedroalbuquerque/ESP32WebServer@^1.0
 	adafruit/DHT sensor library@^1.4.4
 	adafruit/Adafruit Unified Sensor@^1.1.6
+extra_scripts = 
+	post:SourceFiles/Tools/build.py
 
 [env:featheresp32]
 board = featheresp32
-monitor_speed = 115200
+
+[env:wt32-eth01]
+board = wt32-eth01
+build_flags =
+   -DMOSI=18
+   -DMISO=19
+   -DSCK=5
+   -DSS=21
+   -DSDA=23
+   -DSCL=22
+extra_scripts = 
+	post:SourceFiles/Tools/build.py
