--- a/platformio.ini
+++ b/platformio.ini
@@ -12,7 +12,7 @@
 src_dir = SourceFiles/JmcFilamentScale
 lib_dir = SourceFiles/Libraries
 
-default_envs = featheresp32 #, wt32-eth01
+default_envs = featheresp32 
 
 [env]
 platform = espressif32
