Ethernet support. TTGO POE and WT32-ETH01 board currently.
v0.0.2

--- a/platformio.ini
+++ b/platformio.ini
@@ -12,7 +12,7 @@
 src_dir = SourceFiles/JmcFilamentScale
 lib_dir = SourceFiles/Libraries
 
-default_envs = featheresp32 
+default_envs = featheresp32, ttgo-poe
 
 [env]
 platform = espressif32
@@ -29,7 +29,7 @@ lib_deps =
 	bblanchon/ArduinoJson@^6.19.4
 	madhephaestus/ESP32Encoder@^0.9.2
 	thomasfredericks/Bounce2@^2.71
-	madhephaestus/Esp32WifiManager@^0.14.0
+	#madhephaestus/Esp32WifiManager@^0.14.0 #original project mistake?
 	pedroalbuquerque/ESP32WebServer@^1.0
 	adafruit/DHT sensor library@^1.4.4
 	adafruit/Adafruit Unified Sensor@^1.1.6
@@ -42,9 +42,27 @@ board = featheresp32
 [env:wt32-eth01]
 board = wt32-eth01
 build_flags =
-   -DMOSI=18
-   -DMISO=19
-   -DSCK=5
-   -DSS=21
-   -DSDA=23
-   -DSCL=22
+	-DMOSI=18
+	-DMISO=19
+	-DSCK=5
+	-DSS=21
+	-DSDA=23
+	-DSCL=22
+	#ETH
+    -DETH_ADDR=1
+    -DETH_POWER_PIN=16
+    -DETH_MDC_PIN=23
+    -DETH_MDIO_PIN=18
+	-DETH_TYPE=ETH_PHY_LAN8720
+    -DETH_CLK_MODE=ETH_CLOCK_GPIO0_IN   
+
+[env:ttgo-poe]
+board = esp-wrover-kit
+build_flags =
+	#ETH
+    -DETH_ADDR=0
+    -DETH_POWER_PIN=-1
+    -DETH_MDC_PIN=23
+    -DETH_MDIO_PIN=18
+	-DETH_TYPE=ETH_PHY_LAN8720
+    -DETH_CLK_MODE=ETH_CLOCK_GPIO17_OUT
